# ds-toolbox

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt
.github/: ci.yml
.github/workflows/: ci.yml  python-package.yml
docs/: .buildinfo  ds_toolbox.econometrics.html  ds_toolbox.econometrics.rst  ds_toolbox.html  ds_toolbox.ml.html  ds_toolbox.ml.rst  ds_toolbox.rst  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html  tests.rst
docs/_sources/: ds_toolbox.rst.txt  index.rst.txt  modules.rst.txt  tests.rst.txt
ds_toolbox/: spark_utils.py  statistics.py  utils.py
ds_toolbox/econometrics/: casual_regression.py  causal_regression.py
ds_toolbox/ml/: evaluator.py
play_house/: Cate_Estimators.ipynb  Intro-Causal-Inference-Practical-Example.ipynb
tests/: conftest.py  test_ds_toolbox.py  test_econometrics_casual_regression.py  test_econometrics_causal_regression.py  test_ml_evaluator.py  test_statistics.py
tests/data/: df_test_compute_cum_elasticity.csv  df_test_compute_cum_elasticity_output.csv  ice_creams.csv
