[tool.poetry]
name = "ds-toolbox"
version = "0.1.0"
description = ""
authors = ["viniciusmsousa <vinisousa04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^5.5.3"
notebook = "^6.3.0"
jupyter = "^1.0.0"
typeguard = "^2.12.0"
pandas = "^1.2.3"
numpy = "^1.20.2"
scikit-posthocs = "^0.6.7"
scipy = ">=1.6.2"
sklearn = "^0.0"
nltk = "^3.5"
pytest = "^6.2.3"
Pillow = "^8.2.0"
image = "^1.5.33"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
