[tool.poetry]
name = "ds-toolbox"
version = "0.1.0"
description = ""
authors = ["viniciusmsousa <vinisousa04@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
typeguard = "^2.12.0"
pandas = "^1.2.3"
scikit-posthocs = "^0.6.7"
numpy = "1.20.3"
scipy = "1.5.4"
pyspark = ">=3.0.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
ipykernel = "^5.5.5"
notebook = "^6.3.0"
jupyter = "^1.0.0"
pylint = "^2.8.2"
flake8 = "^3.9.2"
Cython = "^0.29.23"
pybind11 = "^2.6.2"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
