[tool.poetry]
name = "ds-toolbox"
version = "0.2.0"
description = "A ToolBox with daily helpers for the analytical part of a Data Scientist."
authors = ["viniciusmsousa <vinisousa04@gmail.com>"]
documentation = "https://viniciusmsousa.github.io/ds-toolbox/"
license = "GPL-3.0-only"
repository = "https://github.com/viniciusmsousa/ds-toolbox"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
typeguard = "^2.12.0"
pandas = "^1.2.3"
scikit-posthocs = "^0.6.7"
numpy = "^1.19.5"
scipy = "1.5.4"
pyspark = ">=3.0.0"
scikit-learn = "^0.24.2"
statsmodels = "^0.12.2"


[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
ipykernel = "^5.5.5"
notebook = "^6.3.0"
jupyter = "^1.0.0"
pylint = "^2.8.2"
flake8 = "^3.9.2"
Cython = "^0.29.23"
pybind11 = "^2.6.2"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
codecov = "^2.1.11"
pytest-cov = "^2.12.1"
m2r = "^0.2.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
